--- a/src/components/Modal/ModalPostCard.module.css
+++ b/src/components/Modal/ModalPostCard.module.css
@@ -46,3 +46,11 @@
 	font-size: 16px;
 	font-size: 600;
 }
+.upload_image{
+	width: 100%;
+	height: 150px;
+	overflow: auto;
+}
+.upload_image img{
+	width: 100%;
+}
