--- a/src/components/center/PostCard.module.css
+++ b/src/components/center/PostCard.module.css
@@ -1,3 +1,10 @@
+a:hover{
+	color: inherit;
+}
+.profile_link .title:hover{
+ text-decoration: underline;
+ color:#0000ff;
+}
 .post_card {
 	margin-bottom: 8px;
 	border-radius: 10px;
